# PQClean

./: CMakeLists.txt
src/sign/dilithium/dilithium2/clean/: rounding.c
test/kat/: Cargo.toml
test/kat/cavptool/: Cargo.toml
test/kat/cavptool/src/: main.rs
test/kat/pqclean-sys/: Cargo.toml
test/kat/pqclean-sys/src/: bindings.rs  build.rs
